Fixed come smells, renamed services, moved classes